Fri Sep 22 10:41:08 BST 2000 Olly Betts

	* Updated docs in irweight.h; tweaked multimatch.cc.

Thu Sep 21 18:56:23 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added more frobs to quartz: adding stuff to test revision number
	  semantics, and the usage of revision numbers.

Thu Sep 21 18:33:16 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added OmStemmerNode

Thu Sep 21 17:08:35 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fix typo in tests/Makefile.am

Thu Sep 21 16:25:21 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Remove unwanted set_entries() method from QuartzDbTable - must now
	  specify new revision explicitly.  Updated testsuite accordingly.

Thu Sep 21 15:53:30 BST 2000 Olly Betts

	* Very minor changes to LocalMatch.

Thu Sep 21 15:38:05 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* More robust table opening for Quartz, and fixed testsuite.

Thu Sep 21 15:06:55 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Renamed Record to OmIndexerData and Message to OmIndexerMessage.

Thu Sep 21 13:05:58 BST 2000 Olly Betts

	* Removed unused variable `weights' from LocalMatch class.
 
Thu Sep 21 13:00:08 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* A fix for building on Solaris with gcc.

Thu Sep 21 12:58:18 BST 2000 Olly Betts

	* LocalMatch again.  Now that mopts is stored, we don't need to read
	  out most of the contents until we use them.

Thu Sep 21 11:37:39 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Make dist will now fail if Perl XML parser is not available - this
	  means that TODO's in the distribution should always be present and
	  up-to-date.

Thu Sep 21 11:16:22 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Various work making distclean remove all the files it should.  Still
	  leaves Makefiles in directories optionally configured off there,
	  automake bug perhaps?
