@@ -53,7 +53,7 @@ class AndPostList : public BranchPostList {
 	PostList *skip_to(om_docid did, om_weight w_min);
 	bool   at_end() const;
 
-	std::string intro_term_description() const;
+	std::string get_description() const;
 
 	/** Return the document length of the document the current term
 	 *  comes from.
@@ -114,10 +114,9 @@ AndPostList::at_end() const
 }
 
 inline std::string
-AndPostList::intro_term_description() const
+AndPostList::get_description() const
 {
-    return "(" + l->intro_term_description() + " And " +
-	    r->intro_term_description() + ")";
+    return "(" + l->get_description() + " And " + r->get_description() + ")";
 }
 
 inline om_doclength
