@@ -55,7 +55,7 @@ class XorPostList : public BranchPostList {
 	PostList *skip_to(om_docid did, om_weight w_min);
 	bool   at_end() const;
 
-	std::string intro_term_description() const;
+	std::string get_description() const;
 
 	/** Return the document length of the document the current term
 	 *  comes from.
@@ -113,10 +113,9 @@ XorPostList::at_end() const
 }
 
 inline std::string
-XorPostList::intro_term_description() const
+XorPostList::get_description() const
 {
-    return "(" + l->intro_term_description() + " Xor " +
-	    r->intro_term_description() + ")";
+    return "(" + l->get_description() + " Xor " + r->get_description() + ")";
 }
 
 inline om_doclength
